ladici-fengari.html: add line break between initial text node and the one with buildno description

--- a/ladici-fengari.html
+++ b/ladici-fengari.html
@@ -18,6 +18,7 @@
   --print("document: " .. repr(document))
   local text = document:createTextNode("LADICI lua in web browser!")
   document.body:appendChild(text)
+  document.body:appendChild(document:createElement("br"))
   local buildno = require "buildno01"
   local text = document:createTextNode(buildno.description)
   document.body:appendChild(text)
