--- a/ladici-fengari.html
+++ b/ladici-fengari.html
@@ -3,26 +3,6 @@
 </head>
 <body>
 <script src="fengari-web.js" type="text/javascript"></script>
-<!-- <script src="/my-script.lua" type="application/lua" async></script> -->
-<script type="application/lua">
-  print("LADICI lua in web browser!")
-  --print(package.path)
-  package.path = './?.lua'
-  --print(package.path)
-  local js = require "js"
-  --print("js: " .. repr(js))
-  local window = js.global
-  --window.title = "LADICI lua in web browser!"
-  --print("window: " .. repr(window))
-  local document = window.document
-  --print("document: " .. repr(document))
-  local text = document:createTextNode("LADICI lua in web browser!")
-  document.body:appendChild(text)
-  document.body:appendChild(document:createElement("br"))
-  local buildno = require "buildno01"
-  local text = document:createTextNode(buildno.description)
-  document.body:appendChild(text)
-  print("LADICI done")
-</script>
+<script src="/ladici-fengari.lua" type="application/lua" async></script>
 </body>
 </html>
